# double-compresso

./: .gitignore  DEV.md  README.md  TODO.md  justfile  justfile.devcontainer.just
.devcontainer/: devcontainer.json
.devcontainer/tcp4096/: devcontainer.json
.github/workflows/: ci.yml
ci/: .gitignore
ci/cicli/: flock.py  log.py  main.py  wsl.py
ci/container/base/: 0001-fix-build-with-mingw.patch  Containerfile  is_aarch64  is_amd64
ci/just/: all.inc.just  common-kotlin.inc.just  common-out-kotlin.inc.just  common-out-rust.inc.just  common-rust.inc.just  conf.inc.just  devcont-inside.inc.just  devcont-outside.inc.just  dir-kotlin.inc.just  dir-root-plus-1.inc.just  dir-root.inc.just  dir-rust.inc.just  wrap-dev-kotlin.inc.just  wrap-dev-rust.inc.just
ci/make/: elf2uf2.mk  sign-apk.mk
hw/pi-pico-2-w/: .gitignore  hw-pi-pico-2-w.kicad_prl  hw-pi-pico-2-w.kicad_pro  hw-pi-pico-2-w.kicad_sch  sym-lib-table
hw/pi-pico-2-w/3rdp/: RaspberryPi_Pico.version
hw/pi-pico-2-w/3rdp/RaspberryPi_Pico/: ATTRIBUTION.txt
hw/pi-pico-2-w/3rdp/RaspberryPi_Pico/Module_RaspberryPi_Pico.3dshapes/: RaspberryPi_Pico.wrl  RaspberryPi_Pico_AddedHeaders.wrl  RaspberryPi_Pico_AddedHeaders_Socketed.wrl  RaspberryPi_Pico_H.wrl  RaspberryPi_Pico_H_Socketed.wrl  RaspberryPi_Pico_W.wrl  RaspberryPi_Pico_WH.wrl  RaspberryPi_Pico_WH_Socketed.wrl  RaspberryPi_Pico_W_AddedHeaders.wrl  RaspberryPi_Pico_W_AddedHeaders_Socketed.wrl
kotlin/: .gitignore  build.gradle.kts  gradle.properties  justfile  justfile.devcontainer.just  settings.gradle.kts
kotlin/app/: build.gradle.kts
kotlin/app/src/androidTest/java/dev/ypipe/doublecompresso/app/: MainActivityTest.kt
kotlin/app/src/main/java/dev/ypipe/doublecompresso/app/: MainActivity.kt
kotlin/buildSrc/: build.gradle.kts  settings.gradle.kts
kotlin/buildSrc/src/main/kotlin/: publish.gradle.kts
kotlin/gradle/: libs.versions.toml  toolchain.versions.toml
kotlin/library-android/: build.gradle.kts
kotlin/library-compose/: build.gradle.kts
kotlin/library-compose/src/androidTest/java/dev/ypipe/doublecompresso/app/: FactorialTest.kt
kotlin/library-compose/src/main/: AndroidManifest.xml
kotlin/library-compose/src/main/java/dev/ypipe/doublecompresso/app/: ComposeActivity.kt
kotlin/library-compose/src/main/java/dev/ypipe/doublecompresso/app/ui/components/: Factorial.kt
kotlin/library-kotlin/: build.gradle.kts
rust/: .gitignore  Cargo.toml  README.md  justfile  justfile.devcontainer.just  rust-toolchain.toml
rust/.cargo/: config.toml
rust/cli/: Cargo.toml
rust/cli/src/: cli.rs  main.rs
rust/common/: Cargo.toml
rust/common-client/: Cargo.toml
rust/common-client/src/: bt.rs  error.rs  lib.rs
rust/common/src/: bt.rs  lib.rs
rust/fw/: Cargo.toml  build.rs
rust/fw/cyw43-firmware/: version.txt
rust/fw/src/: main.rs  peripheral.rs
rust/gui/: Cargo.toml
rust/gui/src/: main.rs
