[package]
name = "double-compresso-cli"
description = "DoubleCompresso CLI"

version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
btleplug = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

[target.'cfg(windows)'.dependencies]
mimalloc = { workspace = true }
