[package]
name = "double-compresso-cli"
description = "DoubleCompresso CLI"

version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
double-compresso-common-client = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(windows)'.dependencies]
mimalloc = { workspace = true }
