[package]
name = "double-compresso-common-client"
description = "DoubleCompresso client library"

version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
anyhow = { workspace = true }
btleplug = { workspace = true }
double-compresso-common = { workspace = true }
futures = { workspace = true }
never-say-never = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
