[package]
name = "double-compresso-fw"
description = "DoubleCompresso firmware"

version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
cortex-m-rt = { workspace = true }
cyw43 = { workspace = true }
cyw43-pio = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
display-interface = { workspace = true }
display-interface-spi = { workspace = true }
double-compresso-common = { workspace = true }
embassy-executor = { workspace = true }
embassy-futures = { workspace = true }
embassy-rp = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embedded-graphics = { workspace = true }
embedded-hal-bus = { workspace = true }
futures = { workspace = true }
oled_async = { workspace = true }
panic-probe = { workspace = true }
rand = { workspace = true }
static_cell = { workspace = true }
trouble-host = { workspace = true }
