[package]
name = "double-compresso"
description = "DoubleCompresso GUI"

version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
eframe = { workspace = true }
egui = { workspace = true }
serde = { workspace = true }
winit = { workspace = true }

[target.'cfg(windows)'.dependencies]
mimalloc = { workspace = true }
